--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,4 @@
 # Here is the right place to put the role's input variables.
 # This file also serves as a documentation for such a variables.
 
-# Examples of role input variables:
-template_foo: "foo"
-template_bar: "bar"
+certificate_requests: []
