--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,3 +3,9 @@
 # Put the role's internal variables here that are not distribution specific.
 
 __certificate_provider_default: certmonger
+
+__certificate_provider_vars:
+  certmonger:
+    packages:
+      - certmonger
+    service: certmonger
