Moving to molecule v3

--- a/tox.ini
+++ b/tox.ini
@@ -110,7 +110,7 @@ changedir = {toxinidir}
 deps =
     {env:LSR_ANSIBLE_DEP:ansible}
     docker
-    molecule<3
+    molecule
     selinux
     -rmolecule_extra_requirements.txt
 runsyspycmd = {toxinidir}/.travis/runsyspycmd.sh
