--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,9 +10,10 @@ lint: |
   flake8
 platforms:
   - name: centos-7
-    image: docker.io/linuxsystemroles/centos-7
+    image: centos/systemd
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    command: /usr/sbin/init
     privileged: true
     pre_build_image: true
 provisioner:
