Added centos-8 image to molecule

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -16,6 +16,13 @@ platforms:
     command: /usr/sbin/init
     privileged: true
     pre_build_image: true
+  - name: centos-8
+    image: centos:8
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    command: /usr/sbin/init
+    privileged: true
+    pre_build_image: true
 provisioner:
   name: ansible
 verifier:
