--- a/tests/tasks/assert_certificate_parameters.yml
+++ b/tests/tasks/assert_certificate_parameters.yml
@@ -51,3 +51,18 @@
       - (cert['subject_alt_name'] | sort) == (result.stdout_lines | sort)
     fail_msg: >-
       {{ cert['subject_alt_name'] | sort }} != {{ result.stdout_lines | sort }}
+
+- name: Retrieve key size
+  shell: >-
+    openssl rsa -in {{ cert['key_path'] }} -text -noout |
+    grep -i "private-key" |
+    sed 's/^[^0-9]\+\([0-9]\+\).\+$/\1/'
+  register: result
+  changed_when: false
+
+- name: Verify key file attributes
+  assert:
+    that:
+      - (result.stdout | int) == (cert["key_size"] | default(2048) | int)
+    fail_msg: |
+      key_size {{ result.stdout }} != {{ cert['key_size'] | default(2048) }}
