--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -3,6 +3,7 @@
 # Put internal variables here with Debian 10 specific values.
 
 __certificate_packages:
+  - python-pyasn1
   - python-cryptography
   - python-dbus
 
