Added multiple fields to certificate subject

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -58,7 +58,6 @@
     common_name: "{{ item.common_name | default(omit) }}"
     owner: "{{ item.owner | default(omit) }}"
     group: "{{ item.group | default(omit) }}"
-    ca: "{{ item.ca | default(omit) }}"
     provider: "{{ item.provider | default(omit) }}"
     principal: "{{ item.principal | default(omit) }}"
     directory: "{{ __certificate_default_directory }}"
@@ -67,4 +66,11 @@
     extended_key_usage: "{{ item.extended_key_usage | default(omit) }}"
     auto_renew: "{{ item.auto_renew | default(omit) }}"
     wait: "{{ certificate_wait }}"
+    country: "{{ item.country | default(omit) }}"
+    state: "{{ item.state | default(omit) }}"
+    locality: "{{ item.locality | default(omit) }}"
+    organization: "{{ item.organization | default(omit) }}"
+    organizational_unit: "{{ item.organizational_unit | default(omit) }}"
+    contact_email: "{{ item.contact_email | default(omit) }}"
+    ca: "{{ item.ca | default(omit) }}"
   loop: "{{ certificate_requests }}"
