Using certreader to parse x509 certs in tests

--- a/examples/key_usage_and_extended_key_usage.yml
+++ b/examples/key_usage_and_extended_key_usage.yml
@@ -12,6 +12,9 @@
         extended_key_usage:
           - id-kp-clientAuth
           - id-kp-serverAuth
+          - anyExtendedKeyUsage
+          - id-kp-OCSPSigning
+          - id-kp-ipsecUser
         ca: self-sign
 
   roles:
