--- a/tests/tests_run_hooks.yml
+++ b/tests/tests_run_hooks.yml
@@ -21,9 +21,12 @@
       - path: /etc/pki/tls/certs/mycert.crt
         key_path: /etc/pki/tls/private/mycert.key
         subject:
-          - CN=www.example.com
+          - name: commonName
+            oid: 2.5.4.3
+            value: www.example.com
         subject_alt_name:
-          - DNS:www.example.com
+          - name: DNS
+            value: www.example.com
   tasks:
     - name: Verify each certificate
       include_tasks: tasks/assert_certificate_parameters.yml
