Fixed tests_subject for CentOS/RedHat 7
There were two points in our tests_subject.yml that should be expected
to fail on CentOS/RedHat 7:

* Certmonger ignores email address on subject
* commonName with comma (,) on in are threated as 2 common names instead
  of just one.

Due to that those 2 points where removed from tests_subject and added to
tests_subject_complex. This new test file does not run verification for
CentOS/RedHat 7 (verification is skipped).

--- a/tests/tasks/assert_certificate_parameters.yml
+++ b/tests/tasks/assert_certificate_parameters.yml
@@ -72,9 +72,11 @@
 - name: Verify certificate subject
   assert:
     that:
-     - cert.subject == cert_issued.subject
+      - cert.subject | sort(attribute="name") ==
+        cert_issued.subject | sort(attribute="name")
     fail_msg: >-
-      {{ cert.subject }} != {{ cert_issued.subject }}
+      {{ cert.subject | sort(attribute="name") }} !=
+      {{ cert_issued.subject | sort(attribute="name") }}
 
 - name: Verify certificate SAN
   assert:
